# dcwf

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  data-pretty.json  data.json  data.md  extended-pretty.json  extended.json  pretty.json
data/: elements.html
data/elements/: acquisition.html  ai-data.html  cybersecurity.html  cyberspace-effects.html  intelligence-cyberspace.html  it-cyberspace.html  leadership.html  legal-law-enforcement.html  software-engineering.html  training-and-education.html
src/: main.rs
t/: README.md
