[package]
name = "dcwf"
version = "0.1.2"
edition = "2021"
description = "Utility to fetch raw JSON data from the DoD Cyber Workforce Framework"
license = "MIT"
repository = "https://github.com/qtfkwk/dcwf"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
indexmap = { version = "2.0.2", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
